syntax = "proto3"; 
package com.lcy.im.common.bean;

option java_package = "com.lcy.im.common.bean"; 
option java_outer_classname = "ProtoMsg"; 


enum HeadType { 
 LOGIN_REQUEST = 0; //登录请求
 LOGIN_RESPONSE = 1; //登录响应
 LOGOUT_REQUEST = 2; //登出请求
 LOGOUT_RESPONSE = 3; //登出响应
 KEEPALIVE_REQUEST = 4; //心跳请求
 KEEPALIVE_RESPONSE = 5; //心跳响应
 MESSAGE_REQUEST = 6; //聊天消息请求
 MESSAGE_RESPONSE = 7; //聊天消息响应
 MESSAGE_NOTIFICATION = 8; //服务器通知
} 
 /*登录请求信息*/ 
message LoginRequest { 
 string uid = 1; // 用户唯一ID 
 string deviceId = 2; // 设备ID 
 string token = 3; // 用户token 
 uint32 platform = 4; //客户端平台 windows、mac、android、ios、web 
 string appVersion = 5; // APP版本号
} 
message LoginResponse { 
 bool result = 1;  ///true表示发送成功，false表示发送失败
 uint32 code = 2; 	//错误编码
 string info = 3; 	//错误信息
 uint32 expose = 4; //错误描述是否提示给用户:1 提示; 0 不提示
} 
 
message MessageRequest { 
 uint64 msgId = 1;  //消息标识
 string from = 2; //来源
 string to = 3; //发给谁
 uint64 time = 4; //发送时间
 uint32 msgType = 5; //消息类型  1：纯文本  2：音频 3：视频 4：地理位置 5：其他
 string content = 6; //内容
 string url = 8;  //多媒体地址
 string property = 9; //附加属性
 string fromNick = 10; //发送者昵称
 string json = 11; //附加的json串
} 
 /*聊天响应*/ 
message MessageResponse { 
 bool result = 1; //true表示发送成功，false表示发送失败
 uint32 code = 2; //错误码
 string info = 3; //错误描述
 uint32 expose = 4; //错误描述是否提示给用户:1 提示; 0 不提示
 bool lastBlock = 5; //是否为最后的应答
 fixed32 blockIndex = 6; //应答的序号
} 
 /*通知消息*/
message MessageNotification { 
 uint32 msgType = 1; 	//通知类型 1 上线 2 下线 ...
 bytes sender = 2; 
 string json = 3; 
 string timestamp = 4; 
}
/*心跳*/
message MessageHeartBeat{
  uint32   seq = 1;
  string   uid = 2;
  string   json =3;
}
 /*外层消息*/ 
message Message { 
 HeadType type = 1; //消息类型
 uint64 sequence = 2; //序列号
 string sessionId = 3; //会话ID 
 LoginRequest loginRequest = 4; //登录请求
 LoginResponse loginResponse = 5; //登录响应
 MessageRequest messageRequest = 6; // 聊天请求
 MessageResponse messageResponse = 7; // 聊天响应
 MessageNotification notification = 8; // 通知消息
 MessageHeartBeat messageHeartBeat = 9; // 心跳通知
} 
